tests/tooling/fixtures/native/recovery/negative/negative_bitwise_parser_missing_and_rhs.objc3
// Expected diagnostic code(s): O3P103.
module NegativeBitwiseParserMissingAndRhs;

fn main() -> i32 {
  let x = 1 & ;
  return x;
}